--- a/Website JS (TODO)/index.html
+++ b/Website JS (TODO)/index.html
@@ -6,23 +6,39 @@
     <title> Meu Website </title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js"></script>
+
+    <!-- fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <!-- ícones -->
+    <script src="https://kit.fontawesome.com/eeb64321c6.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
+    <!-- Navbar -->
+
     <nav class = "navbar">
         <ul>
-            <li><a href = > Início </a></li>
-            <li><a href = > Sobre </a></li>
-            <li><a href = > Projetos </a></li>
-            <li><a href = > Contato </a></li>
+            <h5 id = "icone"> 404 </h5>
+
+            <li><a href = ""> Sobre </a></li>
+            <li><a href = ""> Contato </a></li>
+            <li><a href = ""> Projetos </a></li>
+            <li><a href = ""> Início </a></li>
+            
         </ul>
     </nav>
 
+    <!-- Cabeçalho -->
 
     <header>
         <h1 id = "h1">Olá!</h1>
         <p> Meu nome é Marcos Paulo <br> Sou estudante na área de desenvolvimento web e software</p>
     </header>
+
+    <!-- Info -->
 
     <div id = "informacoes">
         <p id = "info">
@@ -33,7 +49,17 @@
     </div>
 
     <footer>
-        <p id = "footerP"> &copy; 2024 Marcos Paulo </p>
+
+        <a href = "https://www.linkedin.com/in/marcos-paulo-mv/">
+            <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
+        </a>
+
+        <a href = "https://github.com/Kuruma404">
+            <i id = "github" class="fa-brands fa-github fa-2x"></i>
+        </a>
+
+
+        <p id = "footerP"> &copy; 2024 Marcos Paulo MV</p>
     </footer>
 
 
