--- a/Website JS (TODO)/index.html
+++ b/Website JS (TODO)/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Meu Website </title>
+    <title> Portfólio JS </title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js"></script>
 
@@ -14,6 +14,8 @@
 
     <!-- ícones -->
     <script src="https://kit.fontawesome.com/eeb64321c6.js" crossorigin="anonymous"></script>
+    <link rel="icon" type = "image/png" href = "Imagens/home.png">
+
 </head>
 <body>
 
@@ -35,16 +37,17 @@
 
     <header>
         <h1 id = "h1">Olá!</h1>
-        <p> Meu nome é Marcos Paulo <br> Sou estudante na área de desenvolvimento web e software</p>
+        <p> Bem vindo ao meu site!, Meu nome é Marcos Paulo <br> Aqui você encontrará alguns dos meus projetos que foram implementados usando JS.</p>
     </header>
 
     <!-- Info -->
 
     <div id = "informacoes">
         <p id = "info">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis, soluta natus, <br>
-            accusantium exercitationem ab architecto asperiores necessitatibus, optio sed quam est dolor temporibus cumque. <br>
-            Nesciunt nemo neque perspiciatis molestiae sint. <br>
+            Sou estudante na área de Ciência da Computação, possuo experiência com diversas linguagems como: <br> <br>
+            C, C++, C#, Java, Python, HTML/CSS e JavaScript, também possuo experiência com MySQL e PostgreSQL. <br> além disso faço edição de imagem usando o Krita e alguns modelos básicos em 3D com o Blender quando estou de bobeira. <br> <br>
+            Aos 16 anos decidi me aventurar no mundo da programação, aprendendo Python como o a minha primeira linguagem e criando meus primeiros algorítmos <br>
+            e agora em 2024, decidi seguir em frente em rumo ao mercado de trabalho, a fim de adquirir experiência profissional e <br> aplicar meus conhecimentos em diversos tipos de software e websites.
         </p>
     </div>
 
