--- a/Website/index.html
+++ b/Website/index.html
@@ -56,15 +56,17 @@
             Eu amo a tecnologia desde pequeno na época do Windows Vista e aos 16 anos decidi me aventurar no mundo da programação, aprendendo Python como o a minha primeira linguagem e criando meus primeiros algorítmos,
             agora em 2024, decidi seguir em frente em rumo ao mercado de trabalho, a fim de adquirir experiência profissional e aplicar meus conhecimentos em diversos tipos de situações.
         </p>
+
+
     </div>
 
     <footer>
 
-        <a href = "https://www.linkedin.com/in/marcos-paulo-mv/">
+        <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/">
             <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
         </a>
 
-        <a href = "https://github.com/Kuruma404">
+        <a target="_blank" href = "https://github.com/Kuruma404">
             <i id = "github" class="fa-brands fa-github fa-2x"></i>
         </a>
 
