--- a/Website/projetos.html
+++ b/Website/projetos.html
@@ -43,28 +43,35 @@
 
     <div>
         <h1 id = "h1"><b>Projetos</b></h1>
-        <p id = "P1"> Aqui está alguns algoritmos que eu criei em JS, Note que eles também estarão disponíveis na minha página do GitHUb</p>
+        <p id = "P1"> Aqui está alguns algoritmos que eu criei em JS: </p>
     </div>
 
     <!-- Info -->
 
     <div id = "projetos">
-        <h1> ! --- WORK IN PROGRESS --- ! </h1>
+ 
+
+        <div class = "container">
+            <div class = "box" id = "box1">Contador em JS</div>
+            <div class = "box" id = "box2">Soundpad</div>
+            <div class = "box" id = "box3">Calculadora</div>
+        </div>
+
+        <img id = "KuruKuru" src = "Imagens/KURU KURU.gif" alt = "KURU KURU"> 
     </div>
 
     <footer>
 
-        <a href = "https://www.linkedin.com/in/marcos-paulo-mv/">
+        <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/">
             <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
         </a>
 
-        <a href = "https://github.com/Kuruma404">
+        <a target="_blank" href = "https://github.com/Kuruma404">
             <i id = "github" class="fa-brands fa-github fa-2x"></i>
         </a>
 
         <p id = "footerP"> &copy; 2024 Marcos Paulo MV</p>
     </footer>
-
 
 </body>
 </html>
