--- a/Website/sobre.html
+++ b/Website/sobre.html
@@ -50,19 +50,21 @@
            A página foi criada majoritáriamente com o uso de HTML/CSS, com algumas funções extras em JavaScript, como por exemplo os ícones "404" e o copo de café que ao serem clicados, geram sons distintos.
         </h5>
 
-        <h1 id = "H1">Sobre o Desenvolvedor</h1>
+        <h1 id = "H1">Sobre mim</h1>
         <h2 id = "sobre">
-            Tenho 19 anos, sou Carioca e estou atualmente cursando Ciência da Computação, tenho muito desejo de aprender coisas novas e desenvolver minhas habilidades como programador, sou uma pessoa animada e que sempre quer o melhor para todos.
-            </h2>
+            Tenho 19 anos, sou Carioca e estou atualmente cursando Ciência da Computação, 
+            tenho muito desejo de aprender coisas novas e desenvolver minhas habilidades como programador, 
+            sou uma pessoa animada e quero sempre o melhor para todos.
+        </h2>
     </div>
 
     <footer>
 
-        <a href = "https://www.linkedin.com/in/marcos-paulo-mv/">
+        <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/">
             <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
         </a>
 
-        <a href = "https://github.com/Kuruma404">
+        <a target="_blank" href = "https://github.com/Kuruma404">
             <i id = "github" class="fa-brands fa-github fa-2x"></i>
         </a>
 
