--- a/Website/contato.html
+++ b/Website/contato.html
@@ -57,11 +57,11 @@
 
     <footer>
 
-        <a href = "https://www.linkedin.com/in/marcos-paulo-mv/">
+        <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/">
             <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
         </a>
 
-        <a href = "https://github.com/Kuruma404">
+        <a target="_blank" href = "https://github.com/Kuruma404">
             <i id = "github" class="fa-brands fa-github fa-2x"></i>
         </a>
 
