update pra resolução 1366x768 (eu te odeio firefox)

--- a/Website/index.html
+++ b/Website/index.html
@@ -52,8 +52,8 @@
         <p id = "info">
             Sou estudante na área de Programação e possuo experiência com diversas linguagems como:<br>
 
-            <strong><b> C, C++, C#, Java, Python, HTML/CSS e JavaScript</b></strong>, também possuo experiência com MySQL, PostgreSQL e Excel. <br> além disso faço edição de imagem usando o Krita e alguns modelos básicos em 3D com o Blender quando estou de bobeira. <br> <br>
-            Eu amo a tecnologia desde pequeno na época do Windows Vista e aos 16 anos decidi me aventurar no mundo da programação, aprendendo Python como o a minha primeira linguagem e criando meus primeiros algorítmos,
+             C, C++, C#, Java, Python, HTML/CSS e JavaScript, também possuo experiência com MySQL, PostgreSQL e Excel. <br> além disso faço edição de imagem usando o Krita e alguns modelos básicos em 3D com o Blender quando estou de bobeira. <br> <br>
+            Eu amo a tecnologia desde pequeno e aos 16 anos decidi me aventurar no mundo da programação, aprendendo Python como o a minha primeira linguagem e criando meus primeiros algorítmos,
             agora em 2024, decidi seguir em frente em rumo ao mercado de trabalho, a fim de adquirir experiência profissional e aplicar meus conhecimentos em diversos tipos de situações.
         </p>
 
