--- a/Website/projetos.html
+++ b/Website/projetos.html
@@ -41,7 +41,7 @@
 
     <!-- Topo -->
 
-    <div>
+    <div id = "projDiv">
         <h1 id = "h1"><b>Projetos</b></h1>
         <p id = "P1"> Aqui está alguns algoritmos que eu criei em JS: </p>
     </div>
@@ -61,7 +61,6 @@
     </div>
 
     <footer>
-
         <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/">
             <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
         </a>
@@ -69,7 +68,6 @@
         <a target="_blank" href = "https://github.com/Kuruma404">
             <i id = "github" class="fa-brands fa-github fa-2x"></i>
         </a>
-
         <p id = "footerP"> &copy; 2024 Marcos Paulo MV</p>
     </footer>
 
