--- a/Website/sobre.html
+++ b/Website/sobre.html
@@ -41,21 +41,23 @@
 
     <!-- Topo -->
 
-        <h1 id = "h1"><b>Sobre a página</b></h1>
+        <h1 id = "h1"><b>Sobre a página</b></h1> <br>
 
     <!-- Info -->
 
     <div id = "informacoes">
-        <h5 id = "sobre">
+        <p class = "sobre" id = "sobrePag">
            A página foi criada majoritáriamente com o uso de HTML/CSS, com algumas funções extras em JavaScript, como por exemplo os ícones "404" e o copo de café que ao serem clicados, geram sons distintos.
-        </h5>
+        </p>
 
-        <h1 id = "H1">Sobre mim</h1>
-        <h2 id = "sobre">
+        <br>
+
+        <p id = "H1">Sobre mim</h1>
+        <p class = "sobre" id = "sobreMim">
             Tenho 19 anos, sou Carioca e estou atualmente cursando Ciência da Computação, 
             tenho muito desejo de aprender coisas novas e desenvolver minhas habilidades como programador, 
             sou uma pessoa animada e quero sempre o melhor para todos.
-        </h2>
+        </p>
     </div>
 
     <footer>
