--- a/projetos.html
+++ b/projetos.html
@@ -52,9 +52,9 @@
  
 
         <div class = "container">
-            <div class = "box" id = "box1">Contador em JS</div>
-            <div class = "box" id = "box2">Soundpad</div>
-            <div class = "box" id = "box3">Calculadora</div>
+            <a target = "_blank" href = https://github.com/Kuruma404/Contador-JS class = "box" id = "box1"><div>Contador</div></a>
+            <a target = "_blank" href = https://github.com/Kuruma404/Calculadora-JS class = "box" id = "box2"><div>Calculadora</div></a>
+            <a target = "_blank" href = https://github.com/Kuruma404/Soundboard class = "box" id = "box3"><div>Soundboard</div></a>
         </div>
 
         <img id = "KuruKuru" src = "Imagens/KURU KURU.gif" alt = "KURU KURU"> 
