--- a/projetos.html
+++ b/projetos.html
@@ -31,10 +31,10 @@
 
             <img id = "coffee" src = "Imagens/copo de café.png" alt = "☕">
 
-            <li><a href = "sobre.html"> Sobre </a></li>
-            <li><a href = "contato.html"> Contato </a></li>
-            <li><a href = "projetos.html"> Projetos </a></li>
-            <li><a href = "index.html"> Início </a></li>
+            <li><a href = "./sobre"> Sobre </a></li>
+            <li><a href = "./contato"> Contato </a></li>
+            <li><a href = "./projetos"> Projetos </a></li>
+            <li><a href = "./"> Início </a></li>
             
         </ul>
     </nav>
