--- a/sobre.html
+++ b/sobre.html
@@ -31,10 +31,10 @@
 
             <img id = "coffee" src = "Imagens/copo de café.png" alt = "☕">
 
-            <li><a href = "sobre.html"> Sobre </a></li>
-            <li><a href = "contato.html"> Contato </a></li>
-            <li><a href = "projetos.html"> Projetos </a></li>
-            <li><a href = "index.html"> Início </a></li>
+            <li><a href = "./sobre"> Sobre </a></li>
+            <li><a href = "./contato"> Contato </a></li>
+            <li><a href = "./projetos"> Projetos </a></li>
+            <li><a href = "./"> Início </a></li>
             
         </ul>
     </nav>
@@ -70,7 +70,7 @@
             <i id = "github" class="fa-brands fa-github fa-2x"></i>
         </a>
 
-        <p id = "footerP"> &copy; 2024 Marcos Paulo MV</p>
+        <p id = "footerP"> &copy; 2024 Marcos Paulo MV </p>
     </footer>
 
 
