--- a/projetos.html
+++ b/projetos.html
@@ -43,7 +43,7 @@
 
     <div id = "projDiv">
         <h1 id = "h1"><b>Projetos</b></h1>
-        <p id = "P1"> Aqui está alguns algoritmos que eu criei em JS: </p>
+        <p id = "P1"> Aqui está alguns projetos que eu criei em JS: </p>
     </div>
 
     <!-- Info -->
