google search update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js"></script>
 
+    <meta name="google-site-verification" content="ldiShJdMHNo85z9yQb4tZC4peki8HtX9s_4C2wK_Uao" />
+
     <!-- fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +20,7 @@
 
     <!-- ícones -->
     <script src="https://kit.fontawesome.com/eeb64321c6.js" crossorigin="anonymous"></script>
-    <link rel="icon" type = "image/png" href = "Imagens/home.png">
+    <link rel="icon" type = "image/png" href = "Imagens/home.png">  
 
 </head>
 <body>
@@ -62,7 +64,7 @@
 
     <footer>
 
-        <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/">
+        <a target="_blank" href = "https://www.linkedin.com/in/marcos-paulo-mv/"></a>
             <i id = "linkedin" class="fa-brands fa-linkedin-in"></i>
         </a>
 
